correct link name
Correct ev brands  link name

--- a/survey.html
+++ b/survey.html
@@ -28,7 +28,7 @@
             </label>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="/index.html">Home</a></li>
-                <li class="nav-item"><a href="/EV Brands.html">EV Brands</a></li>
+                <li class="nav-item"><a href="/ev-brands.html">EV Brands</a></li>
                 <li class="nav-item"><a href="/survey.html" aria-current="page">Survey</a></li>
                     
             </ul>
