--- a/ev-brands.html
+++ b/ev-brands.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>EV Explorer</title>
-    <link rel="stylesheet" href="./EV brands.css">
+    <link rel="stylesheet" href="./ev-brands.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">跳至主要内容</a>
