--- a/ev-brands.html
+++ b/ev-brands.html
@@ -24,9 +24,9 @@
                 <span class="hamburger__line"></span>
             </label>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/index.html">Home</a></li>
-                <li class="nav-item"><a href="/EV Brands.html" aria-current="page">EV Brands</a></li>
-                <li class="nav-item"><a href="/survey.html">Survey</a></li>
+                <li class="nav-item"><a href="./index.html">Home</a></li>
+                <li class="nav-item"><a href="./EV Brands.html" aria-current="page">EV Brands</a></li>
+                <li class="nav-item"><a href="./survey.html">Survey</a></li>
                     
             </ul>
                 
