--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <span class="hamburger__line"></span>
             </label>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/index.html" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="/ev-brands.html">EV Brands</a></li>
-                <li class="nav-item"><a href="/survey.html">Survey</a></li>
+                <li class="nav-item"><a href="./index.html" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="./ev-brands.html">EV Brands</a></li>
+                <li class="nav-item"><a href="./survey.html">Survey</a></li>
                     
             </ul>
                 
