--- a/survey.html
+++ b/survey.html
@@ -27,9 +27,9 @@
                 <span class="hamburger__line"></span>
             </label>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/index.html">Home</a></li>
-                <li class="nav-item"><a href="/ev-brands.html">EV Brands</a></li>
-                <li class="nav-item"><a href="/survey.html" aria-current="page">Survey</a></li>
+                <li class="nav-item"><a href="./index.html">Home</a></li>
+                <li class="nav-item"><a href="./ev-brands.html">EV Brands</a></li>
+                <li class="nav-item"><a href="./survey.html" aria-current="page">Survey</a></li>
                     
             </ul>
                 
