link and nav-menu
1. Skip link: change content from Chinese to English
2. Logo link: change absolute path to relative path
3. Move nav menu to left a little bit.

--- a/ev-brands.html
+++ b/ev-brands.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./ev-brands.css">
 </head>
 <body>
-    <a href="#main-content" class="skip-link">跳至主要内容</a>
+    <a href="#main-content" class="skip-link">Main content</a>
     <header class="header">
         <h1 class="logo">
-            <a href="/index.html" aria-label="EV Explorer-Back to homepage">
+            <a href="./index.html" aria-label="EV Explorer-Back to homepage">
                 EV Explorer
             </a>
         </h1>
