--- a/survey.html
+++ b/survey.html
@@ -8,11 +8,11 @@
     
 </head>
 <body>
-    <a href="#main-content" class="skip-link">跳至主要内容</a>
+    <a href="#main-content" class="skip-link">Main content</a>
     <header class="header">
         <!-- Logo -->
         <h1 class="logo">
-            <a href="/index.html" aria-label="EV Explorer-Back to homepage">
+            <a href="./index.html" aria-label="EV Explorer-Back to homepage">
                 EV Explorer
             </a>
         </h1>
