--- a/ev-brands.html
+++ b/ev-brands.html
@@ -136,12 +136,12 @@
                     <input type="checkbox" id="readmore-3" class="readmore-toggle">
 
                     <div class="preview">
-                        <p>BYD, once a battery maker, is now the world’s top-selling EV brand, commanding a 31.4% share of China’s market in Q3 2025.</p>
+                        <p>BYD, once a battery maker, is now the world's top-selling EV brand, commanding a 31.4% share of China's market in Q3 2025.</p>
                         <label for="readmore-3" class="readmore-btn">Read More</label>
                     </div>
 
                     <div class="full-content">
-                        <p>Offering both BEVs and PHEVs across its Dynasty (premium), Ocean (youth), and e-series (commercial) lines, BYD launched over 17 SUV models in 2025 and entered Japan’s kei car segment. Powered by its in-house Blade Battery (LFP) and e-Platform 3.0, models like the Seal 05 deliver 570 km range and support 1,000 kW ultra-fast charging. BYD also dominates electric buses, trucks, and rail systems, with direct sales expanding across Europe, Latin America, and Australia. Lacking Tesla’s brand glamour, BYD wins with affordable pricing (from ~$20,000) and proven safety. It’s the democratizer of electric mobility—making zero-emission transport accessible worldwide.</p>
+                        <p>Offering both BEVs and PHEVs across its Dynasty (premium), Ocean (youth), and e-series (commercial) lines, BYD launched over 17 SUV models in 2025 and entered Japan's kei car segment. Powered by its in-house Blade Battery (LFP) and e-Platform 3.0, models like the Seal 05 deliver 570 km range and support 1,000 kW ultra-fast charging. BYD also dominates electric buses, trucks, and rail systems, with direct sales expanding across Europe, Latin America, and Australia. Lacking Tesla's brand glamour, BYD wins with affordable pricing (from ~$20,000) and proven safety. It's the democratizer of electric mobility—making zero-emission transport accessible worldwide.</p>
                         <br>
                         <h3>Key Specifications (2025 Data)</h3>
                         <table>
