--- a/survey.html
+++ b/survey.html
@@ -43,7 +43,7 @@
             <p class="survey-subtitle">Help us understand your EV preferences!</p>
 
             <form action="" method="POST" class="survey-form" novalidate>
-            <!-- 个人信息 -->
+            <!-- Personal information -->
                 <fieldset class="form-section">
                     <legend class="section-title">Personal Information</legend>
 
@@ -94,7 +94,7 @@
                     </div>
                 </fieldset>
 
-                <!-- 问题 1 -->
+                <!-- Question 1 -->
                 <fieldset class="form-section">
                     <legend class="section-title">1. What do you value most about electric vehicles?</legend>
                     <div class="radio-group">
@@ -105,7 +105,7 @@
                     </div>
                 </fieldset>
 
-                <!-- 问题 2 -->
+                <!-- Question 2 -->
                 <fieldset class="form-section">
                     <legend class="section-title">2. What is your daily driving distance?</legend>
                     <div class="radio-group">
@@ -115,7 +115,7 @@
                     </div>
                 </fieldset>
 
-                <!-- 问题 3 -->
+                <!-- Question 3 -->
                 <fieldset class="form-section">
                     <legend class="section-title">3. Which EV feature attracts you the most?</legend>
                     <div class="radio-group">
@@ -125,7 +125,7 @@
                     </div>
                 </fieldset>
 
-                <!-- 问题 4 -->
+                <!-- Question 4 -->
                 <fieldset class="form-section">
                     <legend class="section-title">4. What is your budget for buying a car in USD?</legend>
                     <div class="radio-group">
@@ -135,7 +135,7 @@
                     </div>
                 </fieldset>
 
-                <!-- 提交按钮 -->
+                <!-- Submit -->
                 <div class="submit-wrapper">
                     <button type="submit" class="submit-btn">Submit Survey</button>
                 </div>
